RESOLVED FIXED265900
[WebGPU] createTexture should return a more indicative error message on failure
https://bugs.webkit.org/show_bug.cgi?id=265900
Summary [WebGPU] createTexture should return a more indicative error message on failure
Mike Wyrzykowski
Reported 2023-12-05 13:44:42 PST
[WebGPU] createTexture should return a more indicative error message on failure
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-05 13:45:05 PST
Mike Wyrzykowski
Comment 2 2023-12-05 14:01:21 PST
EWS
Comment 3 2023-12-05 17:20:10 PST
Committed 271581@main (be70bd792301): <https://commits.webkit.org/271581@main> Reviewed commits have been landed. Closing PR #21355 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.