[WebGPU] createTexture should return a more indicative error message on failure https://bugs.webkit.org/show_bug.cgi?id=265900 <radar://119213551>

Reviewed by Dan Glastonbury.

It is easier to debug failures in the CTS and also for real websites
if the error generated is a little more descriptive.

* Source/WebGPU/WebGPU/Device.h:
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Device::errorValidatingTextureCreation):
(WebGPU::Device::createTexture):
(WebGPU::Device::validateCreateTexture): Deleted.

Canonical link: https://commits.webkit.org/271581@main